--- a/CaraUsr.xaml
+++ b/CaraUsr.xaml
@@ -1,5 +1,5 @@
 ﻿<Window
-    x:Class="AppWpfLogin2P2C.DataBinding"
+    x:Class="AppWpfLogin2P2C.CaraUsr"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -40,14 +40,14 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
+                    <RowDefinition Height="0.5*" />
                 </Grid.RowDefinitions>
                 <Label
                     x:Name="lblTitulo"
                     Grid.ColumnSpan="2"
                     Margin="10"
                     HorizontalAlignment="Center"
-                    Content="ADMINISTRACION DE OBRAS"
+                    Content="LISTA DE OBRAS DISPONIBLES"
                     FontSize="35" />
 
                 <ListBox
@@ -82,63 +82,12 @@
                         </DataTemplate>
                     </ListBox.ItemTemplate>
                 </ListBox>
-
-                <ScrollViewer
+                <Button
+                    x:Name="btnComprar"
                     Grid.Row="2"
-                    Grid.ColumnSpan="2"
-                    Margin="20"
-                    VerticalScrollBarVisibility="Auto">
-
-                    <StackPanel>
-                        <Label
-                            Content="AGREGAR OBRA"
-                            FontSize="20"
-                            FontWeight="Bold" />
-
-                        <Label Content="Autor:" />
-                        <TextBox x:Name="txtAutor" />
-
-                        <Label Content="Precio:" />
-                        <TextBox x:Name="txtPrecio" />
-
-                        <Label Content="Año de Creación:" />
-                        <TextBox x:Name="txtAnioCreacion" />
-
-                        <Label Content="Estilo:" />
-                        <TextBox x:Name="txtEstilo" />
-                        <StackPanel Margin="10" Orientation="Horizontal">
-                            <Button
-                                x:Name="btnAgregarImg"
-                                Width="250"
-                                Click="btnAgregarImg_Click"
-                                Content="Agregar Imagen" />
-                            <Image
-                                x:Name="ImagenSelec"
-                                Width="250"
-                                Height="250"
-                                Margin="10"
-                                Stretch="Uniform" />
-                        </StackPanel>
-
-                        <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
-                            <Button
-                                x:Name="btnAgregar"
-                                Width="200"
-                                Click="btnAgregar_Click"
-                                Content="Agregar" />
-                            <Button
-                                x:Name="btnBorrar"
-                                Width="200"
-                                Click="btnBorrar_Click"
-                                Content="Borrar Seleccionado" />
-                        </StackPanel>
-
-                    </StackPanel>
-
-                </ScrollViewer>
-
+                    Width="100"
+                    Content="Comprar" Click="btnComprar_Click" />
             </Grid>
-
         </Border>
     </Grid>
 </Window>
