--- a/WinPrincipal.xaml
+++ b/WinPrincipal.xaml
@@ -49,7 +49,8 @@
                     x:Name="btnSiguente"
                     Grid.Row="1"
                     Width="200"
-                    Content="Siguiente" Click="btnSiguente_Click" />
+                    Click="btnSiguente_Click"
+                    Content="Siguiente" />
             </Grid>
         </Border>
     </Grid>
