--- a/DataBinding.xaml
+++ b/DataBinding.xaml
@@ -25,6 +25,12 @@
             Height="100"
             VerticalAlignment="Top"
             Source="/images/LogoLogin.png" />
+        <Button
+            x:Name="btnVolver"
+            Margin="30"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Content="VOLVER" Click="btnVolver_Click" />
         <Border
             Margin="30,100,30,30"
             BorderBrush="Black"
