--- a/App.xaml
+++ b/App.xaml
@@ -30,6 +30,14 @@
             <Setter Property="Margin" Value="10,0" />
             <Setter Property="Background" Value="black" />
         </Style>
+        <Style TargetType="ComboBox">
+            <Setter Property="FontSize" Value="20" />
+            <Setter Property="Height" Value="40" />
+            <Setter Property="Margin" Value="10,0" />
+            <Setter Property="VerticalContentAlignment" Value="Center" />
+            <Setter Property="Background" Value="White" />
+            <Setter Property="Opacity" Value="0.5" />
+        </Style>
         <!--<Style TargetType="ListBox">
             <Setter Property="Opacity" Value="0" />
         </Style>
